--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <div style="float: left;" id="service1"></div>
     <div style="float: right;" id="service2"></div>
   </div>
-  <!-- <div id="service3"></div>
-  <div id="service4"></div> -->
+  <div id="service3"></div>
+  <div id="service4"></div> 
   <script src="bundles/service1.js"></script>
   <script src="bundles/service2.js"></script>
-  <!-- <script src="bundles/service3.js"></script>
-  <script src="bundles/service4.js"></script> -->
+  <script src="bundles/service3.js"></script>
+  <script src="bundles/service4.js"></script>
 </body>
 </html>
