--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     <div style="float: right;" id="service2"></div>
   </div>
   <div id="service3"></div>
-  <div id="service4"></div> 
+  <div style="float: left;" id="service4"></div>
   <script src="bundles/service1.js"></script>
   <script src="bundles/service2.js"></script>
   <script src="bundles/service3.js"></script>
-  <script src="bundles/service4.js"></script>
+  <script src="bundles/service4.js"></script> 
 </body>
 </html>
