changed service urls

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div style="display: flex; flex-direction: row; align-items: center;" ></div>
-    <div style="float: left;" id="service1"></div>
-    <div style="float: right;" id="service2"></div>
-  </div>
-  <div id="service3"></div>
-  <div style="float: left;" id="service4"></div>
+  <img id="header" src="https://adidasphotogallery.s3-us-west-1.amazonaws.com/screenshots/header.jpeg" >
+    <div id="oneTwo" >
+      <div id="containerOne">
+        <div id="service1"></div>
+      </div>
+      <div id="containerTwo" >
+        <img id="service2" src="https://adidasphotogallery.s3-us-west-1.amazonaws.com/screenshots/checkout.jpeg" ></img>
+      </div>
+    </div>
+  <img id="service3" src="https://adidasphotogallery.s3-us-west-1.amazonaws.com/screenshots/recommendations.jpeg" ></img>
+  <img id="service4" src="https://adidasphotogallery.s3-us-west-1.amazonaws.com/screenshots/reviews.jpeg" ></img>
   <script src="bundles/service1.js"></script>
-  <script src="bundles/service2.js"></script>
+  <!-- <script src="bundles/service2.js"></script>
   <script src="bundles/service3.js"></script>
-  <script src="bundles/service4.js"></script> 
+  <script src="bundles/service4.js"></script>  -->
 </body>
 </html>
